Agregando link del repositorio

--- a/listado_box.html
+++ b/listado_box.html
@@ -101,7 +101,8 @@
                             </ul>
                         </div>
                     </div>
-                </div>                <div class="contenido-box">
+                </div>
+                <div class="contenido-box">
                     <div class="nombre-guitarra">
                         <h5>Fender Stratocaster White</h5>
                     </div>
@@ -122,7 +123,8 @@
                             </ul>
                         </div>
                     </div>
-                </div>                <div class="contenido-box">
+                </div>
+                <div class="contenido-box">
                     <div class="nombre-guitarra">
                         <h5>Fender Stratocaster White</h5>
                     </div>
@@ -143,7 +145,8 @@
                             </ul>
                         </div>
                     </div>
-                </div>                <div class="contenido-box">
+                </div>
+                <div class="contenido-box">
                     <div class="nombre-guitarra">
                         <h5>Fender Stratocaster White</h5>
                     </div>
@@ -164,7 +167,8 @@
                             </ul>
                         </div>
                     </div>
-                </div>                <div class="contenido-box">
+                </div>
+                <div class="contenido-box">
                     <div class="nombre-guitarra">
                         <h5>Fender Stratocaster White</h5>
                     </div>
@@ -198,7 +202,7 @@
     <footer>
         <small>
             2023 - E-Commerce - Codigo Fuente:
-            <a href="#">
+            <a href="https://github.com/MartinTrochez/ParadigmasIII_trabajo_practico_1">
                 <i style="font-size:24px" class="fa">&#xf09b;</i>
             </a>
         </small>
