--- a/producto1.html
+++ b/producto1.html
@@ -96,8 +96,8 @@
                                         consectetur
                                         cupidatat.</li>
                                     <li>Precio: $100</li>
-                                    <li class="link-formuladior">
-                                        <a href="formulario.html">
+                                    <li class="link-formulario">
+                                        <a id="link-compra" href="formulario.html">
                                             Ir a formulario de compra
                                         </a>
                                     </li>
@@ -118,7 +118,7 @@
     <footer>
         <small>
             2023 - E-Commerce - Codigo Fuente:
-            <a href="#">
+            <a href="https://github.com/MartinTrochez/ParadigmasIII_trabajo_practico_1">
                 <i style="font-size:24px" class="fa">&#xf09b;</i>
             </a>
         </small>
