--- a/listado_tabla.html
+++ b/listado_tabla.html
@@ -75,14 +75,12 @@
               </td>
               <td>
                 <p>
-                  Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur
-                  cupidatat.
-                  Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur
-                  cupidatat.
+                  Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
+                  Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.
                   loremSent
                 </p>
-                <ul class="car<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">acteristicas-guitarra">
-                  <li>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur
+                <ul>
+                  <li>Lorem ipsum dolor sit amet,P qui minim labore adipisicing minim sint cillum sint consectetur
                     cupidatat.</li>
                   <li>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur
                     cupidatat.</li>
@@ -186,16 +184,16 @@
     <section class="publicidad">
       <h2>Publicidad</h2>
       <article class="pomociones-article">
-          <img src="img/fender-stratocaster-white.jpg" alt="Ir a comprar">
+        <img src="img/fender-stratocaster-white.jpg" alt="Ir a comprar">
       </article>
     </section>
   </main>
   <footer>
     <small>
-        2023 - E-Commerce - Codigo Fuente: 
-        <a href="#">
-          <i style="font-size:24px" class="fa">&#xf09b;</i>
-        </a>
+      2023 - E-Commerce - Codigo Fuente:
+            <a href="https://github.com/MartinTrochez/ParadigmasIII_trabajo_practico_1">
+                <i style="font-size:24px" class="fa">&#xf09b;</i>
+            </a>
     </small>
   </footer>
 </body>
