--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
 <body>
     <header>
-        <h1><img src="img/logo.png" width="140" alt="e-commerce"></h1>
+        <h1><img id="logo" src="img/logo.png" width="140" alt="e-commerce"></h1>
         <nav class="navbar">
             <div class="contenedor">
                 <div class="link-inicio">
@@ -81,11 +80,11 @@
                         <h2>Productos Populares</h2>
                         <ul>
                             <li><a class="link-producto" href="#">Fender 1</a></li>
-                            <li><a class="link-producto"href="#">Fender 2</a></li>
-                            <li><a class="link-producto"href="#">Fender 3</a></li>
-                            <li><a class="link-producto"href="#">Fender 4</a></li>
-                            <li><a class="link-producto"href="#">Fender 5</a></li>
-                            <li><a class="link-producto"href="#">Fender 6</a></li>
+                            <li><a class="link-producto" href="#">Fender 2</a></li>
+                            <li><a class="link-producto" href="#">Fender 3</a></li>
+                            <li><a class="link-producto" href="#">Fender 4</a></li>
+                            <li><a class="link-producto" href="#">Fender 5</a></li>
+                            <li><a class="link-producto" href="#">Fender 6</a></li>
                         </ul>
                     </article>
                 </div>
@@ -101,7 +100,7 @@
         </section>
     </main>
     <footer>
-       <small>
+        <small>
             2023 - E-Commerce - Codigo Fuente:
             <a href="https://github.com/MartinTrochez/ParadigmasIII_trabajo_practico_1">
                 <i style="font-size:24px" class="fa">&#xf09b;</i>
