--- a/formulario.html
+++ b/formulario.html
@@ -72,7 +72,7 @@
                 </div>
                 <div>
                     <label for="telefono">Teléfono</label>
-                    <input class="input" type="number" name="telefono" value="" required>
+                    <input class="input" type="tel" name="telefono" value="" required>
                 </div>
                 <div class="contenedor-medio-de-pago-flex">
                     <div class="tipo-tarjeta">
@@ -86,7 +86,7 @@
                     </div>
                         <div class="datos-tarjeta">
                             <label for="numero-tarjeta">Numero de la Tarjeta</label> 
-                            <input type="number" name="numero-tarjeta" value="numero-tarjeta" required>
+                            <input type="cc-number" name="numero-tarjeta" value="numero-tarjeta" required>
                         </div>
                 </div>
                 <div class="producto-formulario-flex">
